@@ -1,5 +1,6 @@
 Changes for 1.4.2:
 
+ - added timeout handler for http monitoring (Eugene)
  - more informative report for confiuration script (Eugene)
  - changed installation directory to '$sbin' (Eudene)
  - fixed "Reset" button for Web screens (Eugene)
